tests/spoj/x/ocaml/6.error
compile: exit status 2
File "/workspace/mochi/tests/spoj/x/ocaml/6.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "6" is not a valid module name.
File "/workspace/mochi/tests/spoj/x/ocaml/6.ml", line 280, characters 25-33:
280 |     with Continue -> ()) (!parts) with Break -> ());
                               ^^^^^^^^
Error: This expression has type Obj.t list
       but an expression was expected of type (string * 'a) list list
       Type Obj.t is not compatible with type (string * 'a) list 
